Introduce PropagateItemsSizeHints HeightMode

Introduce a new height mode for the toolbar which is PropagateItemsSizeHints.
It's not default so doesn't change behavior of existing users.
With this the toolbar will keep its own implicitHeight calculated from
the actual items implicit heights

BUG:464910